# Demosense

./: .env.example  .gitignore  DemoSense_Development_Plan.md  DemoSense_Lovable_Build_Guide.md  LOVABLE_KNOWLEDGE.md  Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0a00c25cc564_phase_4_aggregate_table.py  244d760928da_phase_1_schema_org_unit_org_group_.py  7217fad738ec_phase_3_survey_question_response_set_.py  a26bb2a4dfb1_phase_2_role_grant_audit_log_person_.py
scripts/: create_superuser.py  import_county.py  run_api.py  sample_county_template.csv  seed_position_types.py  seed_surveys.py
src/demosense/: auth.py  config.py  db.py  winloop.py
src/demosense/api/: main.py
src/demosense/api/routers/: memberships.py  org_units.py  people.py  role_grants.py  rollup.py  surveys.py
src/demosense/models/: __init__.py  aggregate.py  audit.py  auth.py  org.py  person.py  survey.py
src/demosense/schemas/: aggregate.py  membership.py  org.py  person.py  role_grant.py  survey.py
src/demosense/services/: audit.py  hierarchy.py  rbac.py  rollup.py  survey.py
tests/: conftest.py  test_hierarchy.py  test_rbac.py  test_rollup.py  test_survey_api.py  test_survey_validation.py
